--- a/dspace-xmlui/src/main/webapp/i18n/messages.xml
+++ b/dspace-xmlui/src/main/webapp/i18n/messages.xml
@@ -98,7 +98,7 @@
     <message key="xmlui.ArtifactBrowser.AdvancedSearch.type_subject">Subject</message>
     <message key="xmlui.ArtifactBrowser.AdvancedSearch.type_abstract">Abstract</message>
     <message key="xmlui.ArtifactBrowser.AdvancedSearch.type_series">Series</message>
-    <message key="xmlui.ArtifactBrowser.AdvancedSearch.type_sponsor">Sponsor</message>
+    <message key="xmlui.ArtifactBrowser.AdvancedSearch.type_sponsor">Funder</message>
     <message key="xmlui.ArtifactBrowser.AdvancedSearch.type_identifier">Identifier</message>
     <message key="xmlui.ArtifactBrowser.AdvancedSearch.type_language">Language (ISO)</message>
     <message key="xmlui.ArtifactBrowser.AdvancedSearch.type_keyword">Keyword</message>
@@ -134,6 +134,7 @@
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.sort_by.title">Title</message>
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.sort_by.dateissued">Issue date</message>
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.sort_by.dateaccessioned">Submit date</message>
+	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.sort_by.type">Type</message>
 
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.order.asc">Ascending</message>
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.order.desc">Descending</message>
@@ -143,7 +144,7 @@
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.names.column_heading">Authors Name</message>
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.subject.column_heading">Subject</message>
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.classification.column_heading">Classification</message>
-	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.sponsor.column_heading">Sponsor</message>
+	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.sponsor.column_heading">Funder</message>
 
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.title.metadata.classification">Browsing {0} by Classification {1}</message>
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.trail.metadata.classification">Browsing {0} by Classification</message>
@@ -2236,7 +2237,7 @@
 	<message key="xmlui.dri2xhtml.METS-1.0.item-preview">Preview</message>
 	<message key="xmlui.dri2xhtml.METS-1.0.item-title">Title</message>
 	<message key="xmlui.dri2xhtml.METS-1.0.item-author">Author</message>
-	<message key="xmlui.dri2xhtml.METS-1.0.item-sponsor">Sponsor</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-sponsor">Funder</message>
 	<message key="xmlui.dri2xhtml.METS-1.0.item-abstract">Abstract</message>
 	<message key="xmlui.dri2xhtml.METS-1.0.item-description">Description</message>
 	<message key="xmlui.dri2xhtml.METS-1.0.item-citation">Citation</message>
